<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <url>https://github.com/laravieira/Willy</url>

  <groupId>me.laravieira</groupId>
  <artifactId>willy</artifactId>
  <version>0.17.0</version>
  <packaging>jar</packaging>

  <name>Willy</name>
  <description>A cute discord bot</description>

  <properties>
  	<maven.compiler.source>21</maven.compiler.source>
  	<maven.compiler.target>21</maven.compiler.target>
	<project.java.version>21</project.java.version>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <project.manifest.mainClass>me.laravieira.willy.Willy</project.manifest.mainClass>
    <maven.compile.version>3.11.0</maven.compile.version>
    <maven.assembly.version>3.6.0</maven.assembly.version>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compile.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>${maven.assembly.version}</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>${project.manifest.mainClass}</mainClass>
                </manifest>
              </archive>
              <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
              </descriptorRefs>
              <finalName>${project.artifactId}-${project.version}</finalName>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>jcentral-bitly</id>
      <name>Bitly Repository</name>
      <url>https://jcenter.bintray.com</url>
    </repository>
  	<repository>
      <id>maven-lavaplayer</id>
  	  <name>Lava Player Repository</name>
  	  <url>https://m2.dv8tion.net/releases</url>
  	</repository>
  	<repository>
      <id>jitpack.io</id>
      <name>Youtube Downloader and Whatsapp Repository</name>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>sonatype-public</id>
      <name>SnakeYAML repository</name>
      <url>https://oss.sonatype.org/content/groups/public/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.13</version>
    </dependency>
    <dependency>
      <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.13</version>
    </dependency>
    <dependency>
      <!-- https://search.maven.org/artifact/com.google.code.gson/gson -->
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.11.0</version>
    </dependency>
    <dependency>
      <!-- https://github.com/sealedtx/java-youtube-downloader -->
      <groupId>com.github.sealedtx</groupId>
      <artifactId>java-youtube-downloader</artifactId>
      <version>3.2.3</version>
    </dependency>
    <dependency>
      <!-- https://github.com/stackmagic/bitly-api-client -->
      <groupId>net.swisstech</groupId>
      <artifactId>bitly-api-client</artifactId>
      <version>0.8.0</version>
      <exclusions>
      	<exclusion>
      		<groupId>com.google.code.gson</groupId>
      		<artifactId>gson</artifactId>
      	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-server</artifactId>
      <version>12.0.10</version>
    </dependency>
    <dependency>
      <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet -->
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-servlet</artifactId>
      <version>11.0.21</version>
    </dependency>
    <dependency>
      <!-- https://mvnrepository.com/artifact/org.snakeyaml/snakeyaml-engine -->
      <groupId>org.snakeyaml</groupId>
      <artifactId>snakeyaml-engine</artifactId>
      <version>2.7</version>
    </dependency>
    <dependency>
      <!-- https://github.com/pengrad/java-telegram-bot-api -->
      <groupId>com.github.pengrad</groupId>
      <artifactId>java-telegram-bot-api</artifactId>
      <version>7.4.0</version>
    </dependency>
    <dependency>
      <!-- https://github.com/Auties00/Cobalt -->
      <groupId>com.github.auties00</groupId>
      <artifactId>cobalt</artifactId>
      <version>0.0.5</version>
    </dependency>
    <dependency>
      <!-- https://github.com/Discord4J/Discord4J -->
      <groupId>com.discord4j</groupId>
      <artifactId>discord4j-core</artifactId>
      <version>3.2.6</version>
    </dependency>
    <dependency>
      <!-- https://github.com/sedmelluq/lavaplayer -->
      <groupId>com.sedmelluq</groupId>
      <artifactId>lavaplayer</artifactId>
      <version>1.3.78</version>
    </dependency>
    <dependency>
      <!-- https://github.com/sashirestela/simple-openai -->
      <groupId>io.github.sashirestela</groupId>
      <artifactId>simple-openai</artifactId>
      <version>3.5.1</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.34</version>
    </dependency>
  </dependencies>
  <dependencyManagement>
    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-core</artifactId>
        <version>2.17.1</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>2.17.1</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-datatype-jdk8</artifactId>
        <version>2.17.1</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
</project>
